--- a/index.html
+++ b/index.html
@@ -5,54 +5,47 @@
     <title></title>
     <style media="screen">
       html, body {
-        min-height: 100%;
-        display: flex;
-        background: black;
-        align-items: center;
-        justify-content: center;
+        margin: 0;
+        padding: 0;
       }
 
       .content {
-        height: 1080px;
-        width: 1920px;
+        height: 100vh;
+        width: 100vw;
         position: relative;
         overflow: hidden;
       }
 
       .content img {
         position: absolute;
+        height: 100%;
         transition: transform 30s linear;
         cursor: none;
       }
 
-      /* 400px / 30s = 13,33px/s */
+      /* 0,0754 */
       .content:hover #layer-1 {
-        /* transform: translate(-400px, 0); */
-        transform: translate(-800px, 0);
+        transform: translate(-837px, 0);
       }
 
-      /* 3800px / 30s = 126,66px/s */
+      /* 0,7170 */
       .content:hover #layer-2 {
-        /* transform: translate(-3800px, 0); */
-        transform: translate(-7600px, 0);
+        transform: translate(-7959px, 0);
       }
 
-      /* 4800px / 30s = 160px/s */
+      /* 0,9057 */
       .content:hover #layer-3 {
-        /* transform: translate(-4800px, 0); */
-        transform: translate(-9600px, 0);
+        transform: translate(-10053px, 0);
       }
 
-      /* 5300px / 30s = 176,66px/s */
+      /* 1 */
       .content:hover #layer-4 {
-        /* transform: translate(-5300px, 0); */
-        transform: translate(-10600px, 0);
+        transform: translate(-11100px, 0);
       }
 
-      /* 7000px / 30s = 233,33px/s */
+      /* 1,3207 */
       .content:hover #layer-5 {
-        /* transform: translate(-7000px, 0); */
-        transform: translate(-14000px, 0);
+        transform: translate(-14660px, 0);
       }
     </style>
   </head>
